added get current user endpoint
