# src/modules/User/User.controller.ts
@@ -1,0 +1,30 @@
+import { NextFunction, Request, Response } from 'express';
+
+import { LoggerService } from '../Logger/Logger.service';
+import { RouteController } from '../Route/Route.controller';
+
+import { UserService } from './User.service';
+
+export class UserController extends RouteController {
+  #userService: UserService;
+
+  constructor(userService: UserService, loggerService: LoggerService) {
+    super(loggerService);
+
+    this.#userService = userService;
+    this.bindRouter([{ path: '/find', method: 'get', func: this.getUser }]);
+  }
+
+  getUser = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
+    try {
+      const userInfo = req.user;
+      const user = await this.#userService.getUserWithoutPassword({
+        id: userInfo.id,
+      });
+
+      res.status(200).json(user);
+    } catch (e) {
+      next(e);
+    }
+  };
+}
